--- a/apk/res/values-ar/strings.xml
+++ b/apk/res/values-ar/strings.xml
@@ -51,7 +51,7 @@
     <string name="recent_access_screen_description" msgid="331101209889185402">"إليك التطبيقات التي وصلت إلى بياناتك الصحية في آخر 24 ساعة:"</string>
     <string name="today_header" msgid="1006837293203834373">"اليوم"</string>
     <string name="yesterday_header" msgid="6652176268273681505">"أمس"</string>
-    <string name="read_data_access_label" msgid="8968758932021241976">"القراءة: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
+    <string name="read_data_access_label" msgid="8968758932021241976">"بإمكانه قراءة: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"بإمكانه كتابة: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="separator" msgid="5521285473288943819">"، "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"إدارة الأذونات"</string>
@@ -113,7 +113,7 @@
     <string name="background_read_medical_combined_request_description_fitness_granted" msgid="919785628751851996">"السماح لهذا التطبيق بالوصول إلى هذه البيانات حتى في حال عدم استخدامه"</string>
     <string name="background_read_combined_request_title" msgid="4184649296697480520">"الوصول إلى البيانات في الخلفية"</string>
     <string name="background_read_combined_request_description" msgid="2423480522986545286">"السماح لهذا التطبيق بالوصول إلى بيانات Health Connect حتى في حال عدم استخدامه"</string>
-    <string name="history_read_medical_combined_request_title" msgid="1262267962861942478">"الوصول إلى بيانات الصحة واللياقة البدنية"</string>
+    <string name="history_read_medical_combined_request_title" msgid="1262267962861942478">"الوصول إلى بيانات الصحة واللياقة البدنية السابقة"</string>
     <string name="history_read_medical_combined_request_description" msgid="7550922315652791771">"السماح لهذا التطبيق بالوصول إلى البيانات التي تمّت إضافتها قبل ‎<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
     <string name="history_read_medical_combined_request_description_fallback" msgid="3567968660826834911">"السماح لهذا التطبيق بالوصول إلى جميع البيانات السابقة"</string>
     <string name="history_read_combined_request_title" msgid="9023811767370482028">"الوصول إلى البيانات السابقة"</string>
@@ -129,7 +129,7 @@
     <string name="background_read_medical_access_description_fitness_granted" msgid="2584567718805499407">"السماح لهذا التطبيق بالوصول إلى هذه البيانات حتى في حال عدم استخدامه"</string>
     <string name="background_read_access_title" msgid="4184498185599147117">"الوصول إلى البيانات في الخلفية"</string>
     <string name="background_read_access_description" msgid="2360433029368320323">"السماح لهذا التطبيق بالوصول إلى بيانات Health Connect حتى في حال عدم استخدامه"</string>
-    <string name="history_read_medical_access_title" msgid="1375462150672418692">"الوصول إلى بيانات الصحة واللياقة البدنية"</string>
+    <string name="history_read_medical_access_title" msgid="1375462150672418692">"الوصول إلى بيانات الصحة واللياقة البدنية السابقة"</string>
     <string name="history_read_medical_access_description" msgid="5615959269427106141">"السماح لهذا التطبيق بالوصول إلى البيانات التي تمّت إضافتها قبل ‎<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
     <string name="history_read_medical_access_description_fallback" msgid="3888547064992673535">"السماح لهذا التطبيق بالوصول إلى جميع البيانات السابقة"</string>
     <string name="history_read_access_title" msgid="870048398702887144">"الوصول إلى البيانات السابقة"</string>
@@ -138,8 +138,8 @@
     <string name="history_read_medical_access_read_warning" msgid="8878271647163400440">"لا تتم قراءة أي بيانات لياقة بدنية حاليًا لأنّ \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" لم يحصل على أي أذونات بالقراءة"</string>
     <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"بإمكان \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" الوصول إلى البيانات السابقة لسجلّاتك الصحية. لتغيير هذا الإعداد، أوقِف أذونات السجلّات الصحية لهذا التطبيق."</string>
     <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"إدارة أذونات السجلّات الصحية"</string>
-    <string name="additional_access_combined_footer" msgid="5967785355544362840">"يجب منح إذن واحد بالقراءة على الأقل لتفعيل وصول هذا التطبيق إلى البيانات في الخلفية أو البيانات السابقة"</string>
-    <string name="additional_access_background_footer" msgid="1638739578431818525">"يجب منح إذن واحد بالقراءة على الأقل لتفعيل وصول هذا التطبيق إلى البيانات في الخلفية"</string>
+    <string name="additional_access_combined_footer" msgid="5967785355544362840">"يجب منح إذن واحد بالقراءة على الأقل لتفعيل أذونات وصول هذا التطبيق إلى البيانات السابقة أو البيانات في الخلفية"</string>
+    <string name="additional_access_background_footer" msgid="1638739578431818525">"يجب منح إذن واحد بالقراءة على الأقل لتفعيل إذن وصول هذا التطبيق إلى البيانات في الخلفية"</string>
     <string name="additional_access_history_footer" msgid="5326814559930548467">"يجب منح إذن واحد بالقراءة على الأقل لتفعيل وصول هذا التطبيق إلى البيانات السابقة"</string>
     <string name="historic_access_description" msgid="3309195636349468633">"السماح لهذا التطبيق بالوصول إلى جميع بيانات Health Connect السابقة"</string>
     <string name="background_read_description" msgid="3203594555849969283">"السماح لهذا التطبيق بالوصول إلى بيانات Health Connect في حال عدم استخدام التطبيق"</string>
@@ -356,7 +356,7 @@
     <string name="mindfulness_lowercase_label" msgid="5184488636180881614">"اليقظة والوعي التام"</string>
     <string name="mindfulness_read_content_description" msgid="739187536826062524">"قراءة بيانات جلسة اليقظة والوعي التام"</string>
     <string name="mindfulness_write_content_description" msgid="7925112426563398421">"كتابة بيانات جلسة اليقظة والوعي التام"</string>
-    <string name="read_permission_category" msgid="6002099618259628632">"منح تطبيق \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" الإذن بالقراءة"</string>
+    <string name="read_permission_category" msgid="6002099618259628632">"السماح لتطبيق \"<xliff:g id="APP_NAME">%1$s</xliff:g>\"  بقراءة التالي"</string>
     <string name="write_permission_category" msgid="1529702804865008111">"منح التطبيق \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" الإذن بالكتابة"</string>
     <string name="request_permissions_allow" msgid="4201324235711040631">"السماح"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"السماح بالكل"</string>
@@ -439,8 +439,8 @@
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"تم الوصول إلى البيانات في آخر 24 ساعة"</string>
     <string name="app_access_title" msgid="7137018424885371763">"إمكانية وصول التطبيق إلى البيانات"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"ليس لديك الآن أي تطبيقات متوافقة مثبَّتة"</string>
-    <string name="additional_access_label" msgid="4645249249222528341">"إذن الوصول الإضافي"</string>
-    <string name="additional_access_summary" msgid="1076197455435130191">"البيانات السابقة وبيانات الخلفية"</string>
+    <string name="additional_access_label" msgid="4645249249222528341">"أذونات وصول إضافية"</string>
+    <string name="additional_access_summary" msgid="1076197455435130191">"البيانات السابقة والبيانات في الخلفية"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"تمت إزالة الأذونات الإضافية لهذا التطبيق"</string>
     <string name="permissions_header" msgid="6519976063360071569">"الأذونات"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"الصحة واللياقة البدنية"</string>
@@ -541,10 +541,8 @@
     <string name="onboarding_description" msgid="3479157507808350452">"يُخزِّن تطبيق Health Connect بيانات الصحة واللياقة البدنية، ما يمنحك طريقة بسيطة لمزامنة التطبيقات المختلفة على جهازك"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"يُخزِّن تطبيق Health Connect بيانات الصحة واللياقة البدنية الواردة من تطبيقات مختلفة ويزامنها.\n\n"<b>"بيانات الصحة واللياقة البدنية،"</b>" بما في ذلك جلسات التمارين الرياضية والخطوات والتغذية والنوم وغير ذلك\n\n"<b>"السجلّات الصحية،"</b>" بما في ذلك اللقاحات ونتائج التحاليل الطبية وغير ذلك"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"عند استخدام Health Connect، يمكنك:"</string>
-    <!-- no translation found for share_data_text (6898398345784931678) -->
-    <skip />
-    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
-    <skip />
+    <string name="share_data_text" msgid="6898398345784931678"><b>"مشاركة البيانات مع تطبيقاتك"</b>\n"بإمكانك اختيار البيانات التي يمكن لكل تطبيق قراءتها من تطبيق Health Connect أو كتابتها فيه"</string>
+    <string name="manage_your_settings_text" msgid="8425779735541136878"><b>"إدارة إعداداتك وخصوصيتك"</b>\n"يمكنك تغيير أذونات التطبيق وإدارة بياناتك متى شئت"</string>
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"الرجوع"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"بدء"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"حذف البيانات"</string>
