--- a/apk/res/values-bg/strings.xml
+++ b/apk/res/values-bg/strings.xml
@@ -114,10 +114,10 @@
     <string name="background_read_combined_request_title" msgid="4184649296697480520">"Достъп до данните на заден план"</string>
     <string name="background_read_combined_request_description" msgid="2423480522986545286">"Разрешете на това приложение да осъществява достъп до данните в Health Connect, когато не го използвате"</string>
     <string name="history_read_medical_combined_request_title" msgid="1262267962861942478">"Достъп до миналите данни за физическата активност и благосъстоянието"</string>
-    <string name="history_read_medical_combined_request_description" msgid="7550922315652791771">"Разрешете на това приложение да осъществява достъп до данните, добавени преди <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> г."</string>
+    <string name="history_read_medical_combined_request_description" msgid="7550922315652791771">"Разрешете на това приложение да осъществява достъп до данните, добавени преди <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
     <string name="history_read_medical_combined_request_description_fallback" msgid="3567968660826834911">"Разрешете на това приложение да осъществява достъп до всички минали данни"</string>
     <string name="history_read_combined_request_title" msgid="9023811767370482028">"Достъп до миналите данни"</string>
-    <string name="history_read_combined_request_description" msgid="1437787086896636484">"Разрешете на това приложение да осъществява достъп до данните в Health Connect, добавени преди <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> г."</string>
+    <string name="history_read_combined_request_description" msgid="1437787086896636484">"Разрешете на това приложение да осъществява достъп до данните в Health Connect, добавени преди <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
     <string name="history_read_combined_request_description_fallback" msgid="4974756796396067521">"Разрешете на това приложение да осъществява достъп до всички минали данни в Health Connect"</string>
     <string name="history_read_medical_combined_request_footer" msgid="5301940225768076844">"<xliff:g id="APP_NAME">%1$s</xliff:g> вече има достъп до миналите данни в здравните ви картони"</string>
     <string name="history_read_medical_combined_request_footer_link" msgid="355676489585738987">"Прочетете повече за разрешенията"</string>
@@ -130,10 +130,10 @@
     <string name="background_read_access_title" msgid="4184498185599147117">"Достъп до данните на заден план"</string>
     <string name="background_read_access_description" msgid="2360433029368320323">"Разрешете на това приложение да осъществява достъп до данните в Health Connect, когато не го използвате"</string>
     <string name="history_read_medical_access_title" msgid="1375462150672418692">"Достъп до миналите данни за физическата активност и благосъстоянието"</string>
-    <string name="history_read_medical_access_description" msgid="5615959269427106141">"Разрешете на това приложение да осъществява достъп до данните, добавени преди <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> г."</string>
+    <string name="history_read_medical_access_description" msgid="5615959269427106141">"Разрешете на това приложение да осъществява достъп до данните, добавени преди <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
     <string name="history_read_medical_access_description_fallback" msgid="3888547064992673535">"Разрешете на това приложение да осъществява достъп до всички минали данни"</string>
     <string name="history_read_access_title" msgid="870048398702887144">"Достъп до миналите данни"</string>
-    <string name="history_read_access_description" msgid="800722432229526128">"Разрешете на това приложение да осъществява достъп до данните в Health Connect, добавени преди <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> г."</string>
+    <string name="history_read_access_description" msgid="800722432229526128">"Разрешете на това приложение да осъществява достъп до данните в Health Connect, добавени преди <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
     <string name="history_read_access_description_fallback" msgid="4151538305657852010">"Разрешете на това приложение да осъществява достъп до всички минали данни в Health Connect"</string>
     <string name="history_read_medical_access_read_warning" msgid="8878271647163400440">"Понастоящем не се четат данни за физическата активност, защото <xliff:g id="APP_NAME">%1$s</xliff:g> няма необходимите разрешения"</string>
     <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"<xliff:g id="APP_NAME">%1$s</xliff:g> вече има достъп до миналите данни в здравните ви картони. За да промените това, изключете разрешенията за здравен картон за това приложение"</string>
@@ -1123,7 +1123,7 @@
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Преглед в магазина за приложения"</string>
     <string name="lock_screen_banner_title" msgid="5384381892985739755">"Задаване на опция за заключване на екрана"</string>
     <string name="lock_screen_banner_content" msgid="3392527073622152481">"За допълнителна сигурност на здравните ви данни задайте ПИН код, фигура или парола за това устройство"</string>
-    <string name="lock_screen_banner_button" msgid="2537090011380728122">"Задаване на опция за заключване на екрана"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"Задаване на опция"</string>
     <string name="select_all" msgid="837499881590001166">"Избиране на всички"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Свързаните приложения вече няма да могат да четат тези данни от Health Connect"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"С отметка"</string>
