--- a/apk/res/values-bn/strings.xml
+++ b/apk/res/values-bn/strings.xml
@@ -368,7 +368,7 @@
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"আপনি এই অ্যাপকে পড়ার অ্যাক্সেস দিলে অ্যাপটি নতুন ও পুরনো ডেটা পড়তে পারবে"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"<xliff:g id="APP_NAME">%1$s</xliff:g>-কে Health Connect অ্যাক্সেস করার অনুমতি দেবেন?"</string>
     <string name="request_permissions_with_medical_header_title" msgid="6269944931319362595">"<xliff:g id="APP_NAME">%1$s</xliff:g>-কে ফিটনেস ও ওয়েলনেস সংক্রান্ত ডেটা অ্যাক্সেস করার অনুমতি দিতে চান?"</string>
-    <string name="request_permissions_rationale" msgid="2642076968583316986">"<xliff:g id="APP_NAME">%1$s</xliff:g> কীভাবে তার <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>-এ আপনার ডেটা ম্যানেজ করে আপনি তা জানতে পারবেন"</string>
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"<xliff:g id="APP_NAME">%1$s</xliff:g> কীভাবে তার <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g> অনুযায়ী আপনার ডেটা ম্যানেজ করে আপনি তা জানতে পারবেন"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"গোপনীয়তা নীতি"</string>
     <string name="medical_request_header" msgid="2300521519021510027">"<xliff:g id="APP_NAME">%1$s</xliff:g>-কে আপনার স্বাস্থ্য বিষয়ক রেকর্ড অ্যাক্সেস করার জন্য অনুমতি দেবেন?"</string>
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"আপনি অ্যাক্সেস দিলে, অ্যাপটি অ্যালার্জি, ল্যাবের ফলাফল, ভ্যাকসিন ও আরও অনেক কিছুর মতো ডেটা পড়তে ও সেভ করতে পারবে\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
@@ -423,7 +423,7 @@
     <string name="no_apps_allowed" msgid="5794833581324128108">"কোনও অ্যাপের অনুমতি নেই"</string>
     <string name="no_apps_denied" msgid="743327680286446017">"সব অ্যাপকে অনুমতি দেওয়া হয়েছে"</string>
     <string name="permissions_disconnect_all_dialog_title" msgid="27474286046207122">"সব অ্যাপের জন্য অ্যাক্সেস সরাবেন?"</string>
-    <string name="permissions_disconnect_all_dialog_message" msgid="3151109627457270499">"আপনার কোনও অ্যাপ আর Health Connect-এর ডেটা অ্যাক্সেস বা এতে নতুন ডেটা যোগ করতে পারবে না। এটি আগে সেভ থাকা কোনও ডেটা মুছে ফেলে না।\n\nএই অ্যাপের থাকতে পারে এমন অন্যান্য অনুমতির উপরে এটি প্রভাব ফেলে না, যেমন লোকেশন, ক্যামেরা বা মাইক্রোফোন।"</string>
+    <string name="permissions_disconnect_all_dialog_message" msgid="3151109627457270499">"আপনার কোনও অ্যাপ আর Health Connect-এর ডেটা অ্যাক্সেস বা এতে নতুন ডেটা যোগ করতে পারবে না। এটি আগে সেভ থাকা কোনও ডেটা মুছে ফেলে না।\n\nএই অ্যাপের, লোকেশন, ক্যামেরা বা মাইক্রোফোনের মতো অন্যান্য কোনও অনুমতি থাকলেও তার উপর এটি প্রভাব ফেলে না।"</string>
     <string name="permissions_disconnect_all_dialog_disconnect" msgid="2134136493310257746">"সবকটি সরান"</string>
     <string name="manage_permissions_manage_app_header" msgid="6356348062088358761">"অ্যাপ ম্যানেজ করা"</string>
     <string name="see_app_data" msgid="3951030076195119476">"অ্যাপ ডেটা দেখুন"</string>
