--- a/apk/res/values-is/strings.xml
+++ b/apk/res/values-is/strings.xml
@@ -343,7 +343,7 @@
     <string name="procedures_uppercase_label" msgid="9176087520132593261">"Upplýsingar um meðferðir"</string>
     <string name="procedures_lowercase_label" msgid="5320804313946273234">"upplýsingar um meðferðir"</string>
     <string name="procedures_content_description" msgid="1086900373141440005">"Lesa upplýsingar um meðferðir"</string>
-    <string name="social_history_uppercase_label" msgid="4119611299449533999">"Upplýsingar um lífstíl"</string>
+    <string name="social_history_uppercase_label" msgid="4119611299449533999">"Upplýsingar um lífsstíl"</string>
     <string name="social_history_lowercase_label" msgid="9027541979445736412">"upplýsingar um lífstíl"</string>
     <string name="social_history_content_description" msgid="7187059309389849831">"Lesa upplýsingar um lífstíl"</string>
     <string name="visits_uppercase_label" msgid="8532619758336375886">"Upplýsingar um heimsóknir"</string>
@@ -376,7 +376,7 @@
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Um heilsufarsgögn"</string>
     <string name="medical_request_data_to_share" msgid="6778034304921873317">"Gögnum sem verður deilt eru m.a."</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Ef þú veitir <xliff:g id="APP_NAME">%1$s</xliff:g> aðgang getur forritið deilt heilsufarsgögnunum þínum með Heilsutengingu."</string>
-    <string name="medical_request_footer" msgid="6533749932770903089">"Samstilltu heilsufarsgögnin þín úr mismunandi forritum og af mismunandi upprunum til að nálgast þau á einum stað"</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"Samstilltu heilsufarsgögnin þín úr mismunandi forritum og af mismunandi uppruna til að nálgast þau á einum stað"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Fjarlægja allar heimildir?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Fjarlægja allt"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"<xliff:g id="APP_NAME">%1$s</xliff:g> mun ekki lengur geta lesið eða skrifað nein gögn frá Heilsutengingu.\n\nÞetta hefur ekki áhrif á aðrar heimildir sem forritið kann að hafa, eins og fyrir myndavél, hljóðnema eða staðsetningu."</string>
