--- a/apk/res/values-iw/strings.xml
+++ b/apk/res/values-iw/strings.xml
@@ -138,8 +138,8 @@
     <string name="history_read_medical_access_read_warning" msgid="8878271647163400440">"האפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> לא קוראת בשלב זה נתונים של אימוני כושר כי הרשאת הקריאה לא מופעלת"</string>
     <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"לאפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> כבר יש גישה לנתונים קודמים של סיכום המצב הבריאותי שלך. כדי לשנות את ההגדרה, צריך להשבית את ההרשאות של סיכום המצב הבריאותי מהאפליקציה הזו"</string>
     <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"שינוי ההרשאות של סיכום המצב הבריאותי"</string>
-    <string name="additional_access_combined_footer" msgid="5967785355544362840">"צריך לתת הרשאת קריאה אחת לפחות כדי לאפשר לאפליקציה הזו גישה לנתונים קודמים או גישה ברקע"</string>
-    <string name="additional_access_background_footer" msgid="1638739578431818525">"צריך לתת הרשאת קריאה אחת לפחות כדי לאפשר לאפליקציה הזו גישה ברקע"</string>
+    <string name="additional_access_combined_footer" msgid="5967785355544362840">"צריך לתת הרשאת קריאה אחת לפחות כדי לאפשר לאפליקציה הזו לגשת לנתונים קודמים או לנתונים ברקע"</string>
+    <string name="additional_access_background_footer" msgid="1638739578431818525">"צריך לתת הרשאת קריאה אחת לפחות כדי לאפשר לאפליקציה הזו לגשת לנתונים ברקע"</string>
     <string name="additional_access_history_footer" msgid="5326814559930548467">"צריך לתת הרשאת קריאה אחת לפחות כדי לאפשר לאפליקציה הזו גישה לנתונים קודמים"</string>
     <string name="historic_access_description" msgid="3309195636349468633">"האפליקציה הזו יכולה לגשת לכל הנתונים הקודמים של Health Connect"</string>
     <string name="background_read_description" msgid="3203594555849969283">"האפליקציה הזו יכולה לגשת לנתונים של Health Connect גם כשהיא לא בשימוש"</string>
@@ -312,15 +312,15 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"טמפרטורת העור"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"קריאה של טמפרטורת העור"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"כתיבה של טמפרטורת העור"</string>
-    <string name="browse_health_records_intro" msgid="1611488691642390523">"זה כולל את כל הסיכומים על המצב הבריאותי שסונכרנו עם Health Connect ונוספו לאפליקציה הזו. המידע לא כולל את התיק הרפואי המלא שלך, וגם לא תיאורים רפואיים מסיכום המצב הבריאותי שלך."</string>
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"המידע הזה כולל את כל הסיכומים על המצב הבריאותי שסונכרנו עם Health Connect ונוספו לאפליקציה הזו. המידע לא כולל את התיק הרפואי המלא שלך, וגם לא תיאורים רפואיים מסיכום המצב הבריאותי שלך."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"כל הסיכומים על המצב הבריאותי"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"כל הסיכומים על המצב הבריאותי"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"אישור לכתיבה של כל הסיכומים על המצב הבריאותי"</string>
     <string name="allergies_intolerances_uppercase_label" msgid="2458552115947636884">"אלרגיות"</string>
     <string name="allergies_intolerances_lowercase_label" msgid="5066782073511167288">"אלרגיות"</string>
     <string name="allergies_intolerances_content_description" msgid="7954532940667325068">"קריאת הנתונים על אלרגיות"</string>
-    <string name="conditions_uppercase_label" msgid="5260404343402770877">"תנאים"</string>
-    <string name="conditions_lowercase_label" msgid="2678248918552246997">"תנאים"</string>
+    <string name="conditions_uppercase_label" msgid="5260404343402770877">"מצבים רפואיים"</string>
+    <string name="conditions_lowercase_label" msgid="2678248918552246997">"מצבים רפואיים"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"קריאת התנאים"</string>
     <string name="vaccines_uppercase_label" msgid="1101176371071123187">"חיסונים"</string>
     <string name="vaccines_lowercase_label" msgid="4991324441768127447">"חיסונים"</string>
@@ -432,14 +432,14 @@
     <string name="inactive_apps_section_title" msgid="7492812973696378690">"אפליקציות לא פעילות"</string>
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"לאפליקציות האלה כבר אין גישה, אבל עדיין יש להן נתונים מאוחסנים ב-Health Connect"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"האפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> יכולה לקרוא נתונים שנוספו אחרי <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>"</string>
-    <string name="other_android_permissions" msgid="8051485761573324702">"כדי לנהל הרשאות Android אחרות שיש לאפליקציה הזו גישה אליהן, צריך לעבור אל \'הגדרות\' &gt; \'אפליקציות\'"</string>
+    <string name="other_android_permissions" msgid="8051485761573324702">"כדי לנהל הרשאות אחרות ב-Android שהאפליקציה הזו יכולה לגשת אליהן, צריך לעבור אל \"הגדרות\" &gt; \"אפליקציות\""</string>
     <string name="manage_permissions_rationale" msgid="2780008055185441703">"במדיניות הפרטיות של המפתח מוסבר איך האפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> מטפלת בנתונים שלך"</string>
-    <string name="other_android_permissions_content_description" msgid="2261431010048933820">"כדי לנהל הרשאות Android אחרות שיש לאפליקציה הזו גישה אליהן, עוברים ל\'הגדרות\' ולוחצים על \'אפליקציות\'"</string>
+    <string name="other_android_permissions_content_description" msgid="2261431010048933820">"כדי לנהל הרשאות אחרות ב-Android שהאפליקציה הזו יכולה לגשת אליהן, עוברים ל\"הגדרות\" ולוחצים על \"אפליקציות\""</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"לעיון במדיניות הפרטיות"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"הייתה גישה ב-24 השעות האחרונות"</string>
     <string name="app_access_title" msgid="7137018424885371763">"הנתונים שהאפליקציה יכולה לגשת אליהם"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"כרגע אין לך אפליקציות תואמות מותקנות"</string>
-    <string name="additional_access_label" msgid="4645249249222528341">"הרשאת גישה נוספת"</string>
+    <string name="additional_access_label" msgid="4645249249222528341">"הרשאות גישה נוספות"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"נתונים קודמים, נתוני רקע"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"הוסרו הרשאות נוספות של האפליקציה הזו"</string>
     <string name="permissions_header" msgid="6519976063360071569">"הרשאות"</string>
