--- a/apk/res/values-mn/strings.xml
+++ b/apk/res/values-mn/strings.xml
@@ -113,10 +113,10 @@
     <string name="background_read_medical_combined_request_description_fitness_granted" msgid="919785628751851996">"Таныг энэ аппыг ашиглаагүй байхад тус өгөгдөлд хандахыг нь зөвшөөрөх"</string>
     <string name="background_read_combined_request_title" msgid="4184649296697480520">"Өгөгдөлд ард хандах"</string>
     <string name="background_read_combined_request_description" msgid="2423480522986545286">"Таныг энэ аппыг ашиглаагүй байхад Health Connect-н өгөгдөлд хандахыг нь зөвшөөрөх"</string>
-    <string name="history_read_medical_combined_request_title" msgid="1262267962861942478">"Фитнес, эрүүл оршихуйн өнгөрсөн цагийн өгөгдөлд хандах"</string>
+    <string name="history_read_medical_combined_request_title" msgid="1262267962861942478">"Фитнес, эрүүл оршихуйн өнгөрсөн хугацааны өгөгдөлд хандах"</string>
     <string name="history_read_medical_combined_request_description" msgid="7550922315652791771">"Энэ аппад <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>-с өмнө нэмсэн өгөгдөлд хандахыг зөвшөөрөх"</string>
     <string name="history_read_medical_combined_request_description_fallback" msgid="3567968660826834911">"Энэ аппад өнгөрсөн цагийн бүх өгөгдөлд хандахыг зөвшөөрөх"</string>
-    <string name="history_read_combined_request_title" msgid="9023811767370482028">"Өнгөрсөн цагийн өгөгдөлд хандах"</string>
+    <string name="history_read_combined_request_title" msgid="9023811767370482028">"Өнгөрсөн хугацааны өгөгдөлд хандах"</string>
     <string name="history_read_combined_request_description" msgid="1437787086896636484">"Энэ аппад <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>-с өмнө нэмсэн Health Connect-н өгөгдөлд хандахыг зөвшөөрөх"</string>
     <string name="history_read_combined_request_description_fallback" msgid="4974756796396067521">"Энэ аппад Health Connect-н өнгөрсөн цагийн бүх өгөгдөлд хандахыг зөвшөөрөх"</string>
     <string name="history_read_medical_combined_request_footer" msgid="5301940225768076844">"<xliff:g id="APP_NAME">%1$s</xliff:g> таны эрүүл мэндийн түүхийн өнгөрсөн цагийн өгөгдөлд хандах эрх аль хэдийн авсан байна"</string>
@@ -129,10 +129,10 @@
     <string name="background_read_medical_access_description_fitness_granted" msgid="2584567718805499407">"Таныг энэ аппыг ашиглаагүй байхад тус өгөгдөлд хандахыг нь зөвшөөрөх"</string>
     <string name="background_read_access_title" msgid="4184498185599147117">"Өгөгдөлд ард хандах"</string>
     <string name="background_read_access_description" msgid="2360433029368320323">"Таныг энэ аппыг ашиглаагүй байхад Health Connect-н өгөгдөлд хандахыг нь зөвшөөрөх"</string>
-    <string name="history_read_medical_access_title" msgid="1375462150672418692">"Фитнес, эрүүл оршихуйн өнгөрсөн цагийн өгөгдөлд хандах"</string>
+    <string name="history_read_medical_access_title" msgid="1375462150672418692">"Фитнес, эрүүл оршихуйн өнгөрсөн хугацааны өгөгдөлд хандах"</string>
     <string name="history_read_medical_access_description" msgid="5615959269427106141">"Энэ аппад <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>-с өмнө нэмсэн өгөгдөлд хандахыг зөвшөөрөх"</string>
     <string name="history_read_medical_access_description_fallback" msgid="3888547064992673535">"Энэ аппад өнгөрсөн цагийн бүх өгөгдөлд хандахыг зөвшөөрөх"</string>
-    <string name="history_read_access_title" msgid="870048398702887144">"Өнгөрсөн цагийн өгөгдөлд хандах"</string>
+    <string name="history_read_access_title" msgid="870048398702887144">"Өнгөрсөн хугацааны өгөгдөлд хандах"</string>
     <string name="history_read_access_description" msgid="800722432229526128">"Энэ аппад <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>-с өмнө нэмсэн Health Connect-н өгөгдөлд хандахыг зөвшөөрөх"</string>
     <string name="history_read_access_description_fallback" msgid="4151538305657852010">"Энэ аппад Health Connect-н өнгөрсөн цагийн бүх өгөгдөлд хандахыг зөвшөөрөх"</string>
     <string name="history_read_medical_access_read_warning" msgid="8878271647163400440">"<xliff:g id="APP_NAME">%1$s</xliff:g>-д унших зөвшөөрлийг идэвхжүүлээгүй тул одоогоор ямар ч фитнесийн өгөгдлийг уншаагүй байна"</string>
@@ -1164,7 +1164,7 @@
     <string name="request_permissions_while_using_the_app" msgid="5155929974398889727">"Аппыг ашиглаж байхад"</string>
     <string name="request_permissions_deny_all" msgid="4123735770293545320">"Бүгдээс нь татгалзах"</string>
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"<xliff:g id="APP_NAME">%1$s</xliff:g>-д фитнес, эрүүл оршихуйн өгөгдөлд хандахыг зөвшөөрөх үү?"</string>
-    <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> <xliff:g id="DATA_TYPES">%2$s</xliff:g>-д хандах эрх хүсэж банйа.\n\nТэдгээрийг бүгдийг нь зөвшөөрөхөөр сонгох эсвэл тус тусад нь хянана уу."</string>
+    <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> <xliff:g id="DATA_TYPES">%2$s</xliff:g>-д хандах эрх хүсэж байна.\n\nТэдгээрийг бүгдийг нь зөвшөөрөхөөр сонгох эсвэл тус тусад нь хянана уу."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="APP_NAME">%1$s</xliff:g>-д <xliff:g id="DATA_TYPE">%2$s</xliff:g>-д хандахыг зөвшөөрөх үү?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"Фитнес, эрүүл оршихуй"</string>
     <string name="view_permissions_all_the_time" msgid="6899702815770193290">"үргэлж"</string>
