--- a/apk/res/values-pt/strings.xml
+++ b/apk/res/values-pt/strings.xml
@@ -22,7 +22,7 @@
     <string name="permissions_and_data_header" msgid="4406105506837487805">"Permissões e dados"</string>
     <string name="home_subtitle" msgid="2154213430054477787">"Gerencie os dados de saúde e condicionamento físico no seu dispositivo e controle quais apps podem ter acesso a eles"</string>
     <string name="data_title" msgid="4456619761533380816">"Dados e acesso"</string>
-    <string name="browse_medical_data" msgid="6963802956096683273">"Procurar histórico de saúde"</string>
+    <string name="browse_medical_data" msgid="6963802956096683273">"Consultar histórico de saúde"</string>
     <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Veja seus históricos de saúde e quais apps podem acessá-los"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Todas as categorias"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Acessar todas as categorias"</string>
@@ -107,40 +107,40 @@
     <string name="additional_permissions_combined_request_description" msgid="7136418603696342323">"O app <xliff:g id="APP_NAME">%1$s</xliff:g> também quer acessar as configurações da Conexão Saúde"</string>
     <string name="background_read_medical_combined_request_title_both_types_granted" msgid="4225111383019900451">"Acessar todos os dados em segundo plano"</string>
     <string name="background_read_medical_combined_request_title_medical_granted" msgid="7245376864667067106">"Acessar históricos de saúde em segundo plano"</string>
-    <string name="background_read_medical_combined_request_title_fitness_granted" msgid="2639416977416876229">"Acessar dados de condicionamento físico e bem-estar em segundo plano"</string>
+    <string name="background_read_medical_combined_request_title_fitness_granted" msgid="2639416977416876229">"Acessar dados de bem-estar e condicionamento físico em segundo plano"</string>
     <string name="background_read_medical_combined_request_description_both_types_granted" msgid="8812552783934180223">"Permitir que o app acesse dados de condicionamento físico e bem-estar e históricos de saúde quando você não estiver usando o aplicativo"</string>
     <string name="background_read_medical_combined_request_description_medical_granted" msgid="5140647084504657934">"Permitir que o app acesse os dados quando você não estiver usando o aplicativo"</string>
     <string name="background_read_medical_combined_request_description_fitness_granted" msgid="919785628751851996">"Permitir que o app acesse os dados quando você não estiver usando o aplicativo"</string>
     <string name="background_read_combined_request_title" msgid="4184649296697480520">"Acessar dados em segundo plano"</string>
-    <string name="background_read_combined_request_description" msgid="2423480522986545286">"Permitir que este app acesse os dados da Conexão Saúde quando você não estiver usando o aplicativo"</string>
+    <string name="background_read_combined_request_description" msgid="2423480522986545286">"Permitir que o app acesse os dados da Conexão Saúde quando você não estiver usando o aplicativo"</string>
     <string name="history_read_medical_combined_request_title" msgid="1262267962861942478">"Acessar dados anteriores de condicionamento físico e bem-estar"</string>
     <string name="history_read_medical_combined_request_description" msgid="7550922315652791771">"Permitir que o app acesse os dados adicionados antes de <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
     <string name="history_read_medical_combined_request_description_fallback" msgid="3567968660826834911">"Permitir que o app acesse todos os dados anteriores"</string>
-    <string name="history_read_combined_request_title" msgid="9023811767370482028">"Acessar dados antigos"</string>
+    <string name="history_read_combined_request_title" msgid="9023811767370482028">"Acessar dados anteriores"</string>
     <string name="history_read_combined_request_description" msgid="1437787086896636484">"Permitir que o app acesse os dados da Conexão Saúde adicionados antes de <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
     <string name="history_read_combined_request_description_fallback" msgid="4974756796396067521">"Permitir que este app acesse todos os dados antigos da Conexão Saúde"</string>
     <string name="history_read_medical_combined_request_footer" msgid="5301940225768076844">"<xliff:g id="APP_NAME">%1$s</xliff:g> já pode acessar dados anteriores dos seus históricos de saúde"</string>
     <string name="history_read_medical_combined_request_footer_link" msgid="355676489585738987">"Leia mais sobre permissões"</string>
     <string name="background_read_medical_access_title_both_types_granted" msgid="4475972082863444603">"Acessar todos os dados em segundo plano"</string>
     <string name="background_read_medical_access_title_medical_granted" msgid="7852915238347056139">"Acessar históricos de saúde em segundo plano"</string>
-    <string name="background_read_medical_access_title_fitness_granted" msgid="8691675952190647227">"Acessar dados de condicionamento físico e bem-estar em segundo plano"</string>
+    <string name="background_read_medical_access_title_fitness_granted" msgid="8691675952190647227">"Acessar dados de bem-estar e condicionamento físico em segundo plano"</string>
     <string name="background_read_medical_access_description_both_types_granted" msgid="7193350031798606366">"Permitir que o app acesse dados de condicionamento físico e bem-estar e históricos de saúde quando você não estiver usando o aplicativo"</string>
     <string name="background_read_medical_access_description_medical_granted" msgid="8570683510275055450">"Permitir que o app acesse os dados quando você não estiver usando o aplicativo"</string>
     <string name="background_read_medical_access_description_fitness_granted" msgid="2584567718805499407">"Permitir que o app acesse os dados quando você não estiver usando o aplicativo"</string>
     <string name="background_read_access_title" msgid="4184498185599147117">"Acessar dados em segundo plano"</string>
-    <string name="background_read_access_description" msgid="2360433029368320323">"Permitir que este app acesse os dados da Conexão Saúde quando você não estiver usando o aplicativo"</string>
+    <string name="background_read_access_description" msgid="2360433029368320323">"Permitir que o app acesse os dados da Conexão Saúde quando você não estiver usando o aplicativo"</string>
     <string name="history_read_medical_access_title" msgid="1375462150672418692">"Acessar dados anteriores de condicionamento físico e bem-estar"</string>
     <string name="history_read_medical_access_description" msgid="5615959269427106141">"Permitir que o app acesse os dados adicionados antes de <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
     <string name="history_read_medical_access_description_fallback" msgid="3888547064992673535">"Permitir que o app acesse todos os dados anteriores"</string>
-    <string name="history_read_access_title" msgid="870048398702887144">"Acessar dados antigos"</string>
+    <string name="history_read_access_title" msgid="870048398702887144">"Acessar dados anteriores"</string>
     <string name="history_read_access_description" msgid="800722432229526128">"Permitir que o app acesse os dados da Conexão Saúde adicionados antes de <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
     <string name="history_read_access_description_fallback" msgid="4151538305657852010">"Permitir que este app acesse todos os dados anteriores da Conexão Saúde"</string>
     <string name="history_read_medical_access_read_warning" msgid="8878271647163400440">"Nenhum dado de condicionamento físico está sendo lido, porque o app <xliff:g id="APP_NAME">%1$s</xliff:g> não tem permissões de leitura ativadas"</string>
     <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"<xliff:g id="APP_NAME">%1$s</xliff:g> já pode acessar dados anteriores dos seus históricos de saúde. Para mudar isso, desative as permissões de histórico de saúde para esse app"</string>
     <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"Gerenciar permissões: histórico de saúde"</string>
-    <string name="additional_access_combined_footer" msgid="5967785355544362840">"Habilitar pelo menos uma permissão de leitura para ativar o acesso aos dados históricos ou em segundo plano desse app"</string>
-    <string name="additional_access_background_footer" msgid="1638739578431818525">"Habilitar pelo menos uma permissão de leitura para ativar o acesso em segundo plano desse app"</string>
-    <string name="additional_access_history_footer" msgid="5326814559930548467">"Habilitar pelo menos uma permissão de leitura para ativar o acesso aos dados históricos desse app"</string>
+    <string name="additional_access_combined_footer" msgid="5967785355544362840">"Habilite pelo menos uma permissão de leitura para ativar o acesso aos dados anteriores ou em segundo plano desse app"</string>
+    <string name="additional_access_background_footer" msgid="1638739578431818525">"Habilite pelo menos uma permissão de leitura para ativar o acesso em segundo plano desse app"</string>
+    <string name="additional_access_history_footer" msgid="5326814559930548467">"Habilite pelo menos uma permissão de leitura para ativar o acesso aos dados anteriores desse app"</string>
     <string name="historic_access_description" msgid="3309195636349468633">"Permitir que este app acesse todos os dados antigos da Conexão Saúde"</string>
     <string name="background_read_description" msgid="3203594555849969283">"Permitir que o app acesse os dados da Conexão Saúde quando você não estiver usando o aplicativo"</string>
     <string name="active_calories_burned_uppercase_label" msgid="6231684842932528272">"Calorias ativas queimadas"</string>
@@ -343,10 +343,10 @@
     <string name="procedures_uppercase_label" msgid="9176087520132593261">"Procedimentos"</string>
     <string name="procedures_lowercase_label" msgid="5320804313946273234">"procedimentos"</string>
     <string name="procedures_content_description" msgid="1086900373141440005">"Ler dados de procedimentos"</string>
-    <string name="social_history_uppercase_label" msgid="4119611299449533999">"Histórico de redes sociais"</string>
+    <string name="social_history_uppercase_label" msgid="4119611299449533999">"História social"</string>
     <string name="social_history_lowercase_label" msgid="9027541979445736412">"histórico de redes sociais"</string>
     <string name="social_history_content_description" msgid="7187059309389849831">"Ler histórico de redes sociais"</string>
-    <string name="visits_uppercase_label" msgid="8532619758336375886">"Visitas"</string>
+    <string name="visits_uppercase_label" msgid="8532619758336375886">"Consultas"</string>
     <string name="visits_lowercase_label" msgid="2545887061364564151">"visitas"</string>
     <string name="visits_content_description" msgid="6336796415049565697">"Ler visitas"</string>
     <string name="vital_signs_uppercase_label" msgid="289862347143374640">"Sinais vitais"</string>
@@ -374,7 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Se você conceder acesso, o app poderá ler e gravar dados, como alergias, resultados de laboratório, vacinas e muito mais\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Se você conceder acesso, o app poderá ler dados, como alergias, resultados de laboratório, vacinas e muito mais\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Sobre os históricos de saúde"</string>
-    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Os dados a serem compartilhados incluem"</string>
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Os dados que serão compartilhados incluem"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Se você permitir, o app <xliff:g id="APP_NAME">%1$s</xliff:g> poderá compartilhar seus históricos de saúde com a Conexão Saúde."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Sincronize seus históricos de saúde de diferentes apps e fontes para que eles fiquem em um só lugar"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Remover todas as permissões?"</string>
@@ -432,7 +432,7 @@
     <string name="inactive_apps_section_title" msgid="7492812973696378690">"Apps inativos"</string>
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Estes apps não têm mais acesso, mas ainda possuem dados armazenados na plataforma Conexão Saúde"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"O app <xliff:g id="APP_NAME">%1$s</xliff:g> pode ler dados adicionados após <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>"</string>
-    <string name="other_android_permissions" msgid="8051485761573324702">"Para gerenciar outras permissões do Android que esse app pode acessar, vá até \"Configurações &gt; Apps\""</string>
+    <string name="other_android_permissions" msgid="8051485761573324702">"Para gerenciar outras permissões do Android que esse app pode acessar, vá até Configurações &gt; Apps"</string>
     <string name="manage_permissions_rationale" msgid="2780008055185441703">"Veja na Política de Privacidade do desenvolvedor como o app <xliff:g id="APP_NAME">%1$s</xliff:g> processa seus dados"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"Para gerenciar outras permissões do Android que esse app pode acessar, vá até \"Configurações\" e toque em \"Apps\""</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Leia a Política de Privacidade"</string>
