--- a/apk/res/values-tr/strings.xml
+++ b/apk/res/values-tr/strings.xml
@@ -22,7 +22,7 @@
     <string name="permissions_and_data_header" msgid="4406105506837487805">"İzinler ve veriler"</string>
     <string name="home_subtitle" msgid="2154213430054477787">"Cihazınızdaki sağlık ve fitness verilerini yönetin ve hangi uygulamaların bu verilere erişebileceğini kontrol edin"</string>
     <string name="data_title" msgid="4456619761533380816">"Veriler ve erişim"</string>
-    <string name="browse_medical_data" msgid="6963802956096683273">"Sağlık kayıtlarına göz at"</string>
+    <string name="browse_medical_data" msgid="6963802956096683273">"Sağlık kayıtlarına göz atın"</string>
     <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Sağlık kayıtlarınızı ve bu kayıtlara erişebilen uygulamaları görüntüleyin"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Tüm kategoriler"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Tüm kategorileri göster"</string>
@@ -105,15 +105,15 @@
     <string name="history_read_single_request_description_fallback" msgid="7685531357676523654">"İzin verdiğiniz takdirde bu uygulama, geçmiş tüm Health Connect verilerine erişebilir."</string>
     <string name="additional_permissions_combined_request_title" msgid="5509177449679251301">"<xliff:g id="APP_NAME">%1$s</xliff:g> uygulamasına ek erişim verilsin mi?"</string>
     <string name="additional_permissions_combined_request_description" msgid="7136418603696342323">"<xliff:g id="APP_NAME">%1$s</xliff:g>, şu Health Connect ayarlarına da erişmek istiyor"</string>
-    <string name="background_read_medical_combined_request_title_both_types_granted" msgid="4225111383019900451">"Tüm verilere arka planda erişme"</string>
+    <string name="background_read_medical_combined_request_title_both_types_granted" msgid="4225111383019900451">"Tüm verilere arka planda erişim"</string>
     <string name="background_read_medical_combined_request_title_medical_granted" msgid="7245376864667067106">"Arka planda sağlık kayıtlarına erişme"</string>
-    <string name="background_read_medical_combined_request_title_fitness_granted" msgid="2639416977416876229">"Arka planda fitness ve sağlıklı yaşam verilerine erişme"</string>
+    <string name="background_read_medical_combined_request_title_fitness_granted" msgid="2639416977416876229">"Arka planda fitness ve sağlıklı yaşam verilerine erişim"</string>
     <string name="background_read_medical_combined_request_description_both_types_granted" msgid="8812552783934180223">"Uygulamayı kullanmadığınız zamanlarda bu uygulamanın fitness, sağlıklı yaşam ve sağlık kayıtları verilerine erişmesine izin verir"</string>
     <string name="background_read_medical_combined_request_description_medical_granted" msgid="5140647084504657934">"Bu uygulamanın, uygulamayı kullanmadığınız zamanlarda bu verilere erişmesine izin verir"</string>
     <string name="background_read_medical_combined_request_description_fitness_granted" msgid="919785628751851996">"Bu uygulamanın, uygulamayı kullanmadığınız zamanlarda bu verilere erişmesine izin verir"</string>
     <string name="background_read_combined_request_title" msgid="4184649296697480520">"Verilere arka planda erişim"</string>
     <string name="background_read_combined_request_description" msgid="2423480522986545286">"Bu uygulamanın, uygulamayı kullanmadığınız zamanlarda Health Connect verilerine erişmesine izin verir"</string>
-    <string name="history_read_medical_combined_request_title" msgid="1262267962861942478">"Geçmiş fitness ve sağlıklı yaşam verilerine erişme"</string>
+    <string name="history_read_medical_combined_request_title" msgid="1262267962861942478">"Geçmiş fitness ve sağlıklı yaşam verilerine erişim"</string>
     <string name="history_read_medical_combined_request_description" msgid="7550922315652791771">"Bu uygulamanın, <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> tarihinden önce eklenen verilere erişmesine izin verir"</string>
     <string name="history_read_medical_combined_request_description_fallback" msgid="3567968660826834911">"Bu uygulamanın geçmiş tüm verilere erişmesine izin verir"</string>
     <string name="history_read_combined_request_title" msgid="9023811767370482028">"Geçmiş verilere erişim"</string>
@@ -121,15 +121,15 @@
     <string name="history_read_combined_request_description_fallback" msgid="4974756796396067521">"Bu uygulamanın geçmiş tüm Health Connect verilerine erişmesine izin verir"</string>
     <string name="history_read_medical_combined_request_footer" msgid="5301940225768076844">"<xliff:g id="APP_NAME">%1$s</xliff:g>, sağlık kayıtlarınızla ilgili geçmiş verilere halihazırda erişebilir"</string>
     <string name="history_read_medical_combined_request_footer_link" msgid="355676489585738987">"İzinler hakkında daha fazla bilgi"</string>
-    <string name="background_read_medical_access_title_both_types_granted" msgid="4475972082863444603">"Tüm verilere arka planda erişme"</string>
+    <string name="background_read_medical_access_title_both_types_granted" msgid="4475972082863444603">"Tüm verilere arka planda erişim"</string>
     <string name="background_read_medical_access_title_medical_granted" msgid="7852915238347056139">"Arka planda sağlık kayıtlarına erişme"</string>
-    <string name="background_read_medical_access_title_fitness_granted" msgid="8691675952190647227">"Arka planda fitness ve sağlıklı yaşam verilerine erişme"</string>
+    <string name="background_read_medical_access_title_fitness_granted" msgid="8691675952190647227">"Arka planda fitness ve sağlıklı yaşam verilerine erişim"</string>
     <string name="background_read_medical_access_description_both_types_granted" msgid="7193350031798606366">"Uygulamayı kullanmadığınız zamanlarda bu uygulamanın fitness, sağlıklı yaşam ve sağlık kayıtları verilerine erişmesine izin verir"</string>
     <string name="background_read_medical_access_description_medical_granted" msgid="8570683510275055450">"Bu uygulamanın, uygulamayı kullanmadığınız zamanlarda bu verilere erişmesine izin verir"</string>
     <string name="background_read_medical_access_description_fitness_granted" msgid="2584567718805499407">"Bu uygulamanın, uygulamayı kullanmadığınız zamanlarda bu verilere erişmesine izin verir"</string>
     <string name="background_read_access_title" msgid="4184498185599147117">"Verilere arka planda erişim"</string>
     <string name="background_read_access_description" msgid="2360433029368320323">"Bu uygulamanın, uygulamayı kullanmadığınız zamanlarda Health Connect verilerine erişmesine izin verir"</string>
-    <string name="history_read_medical_access_title" msgid="1375462150672418692">"Geçmiş fitness ve sağlıklı yaşam verilerine erişme"</string>
+    <string name="history_read_medical_access_title" msgid="1375462150672418692">"Geçmiş fitness ve sağlıklı yaşam verilerine erişim"</string>
     <string name="history_read_medical_access_description" msgid="5615959269427106141">"Bu uygulamanın, <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> tarihinden önce eklenen verilere erişmesine izin verir"</string>
     <string name="history_read_medical_access_description_fallback" msgid="3888547064992673535">"Bu uygulamanın geçmiş tüm verilere erişmesine izin verir"</string>
     <string name="history_read_access_title" msgid="870048398702887144">"Geçmiş verilere erişim"</string>
@@ -319,7 +319,7 @@
     <string name="allergies_intolerances_uppercase_label" msgid="2458552115947636884">"Alerjiler"</string>
     <string name="allergies_intolerances_lowercase_label" msgid="5066782073511167288">"alerjiler"</string>
     <string name="allergies_intolerances_content_description" msgid="7954532940667325068">"Alerjileri oku"</string>
-    <string name="conditions_uppercase_label" msgid="5260404343402770877">"Koşullar"</string>
+    <string name="conditions_uppercase_label" msgid="5260404343402770877">"Tıbbi rahatsızlıklar"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"koşullar"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Koşulları okuyun"</string>
     <string name="vaccines_uppercase_label" msgid="1101176371071123187">"Aşılar"</string>
